# pico_lab

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-gcc_toolchain.cmake  auto_set_url.cmake
hello/: CMakeLists.txt  hello.c
